k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-credit
  labels:
    app.kubernetes.io/name: demo-credit
