k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-credit-api
  namespace: demo-credit
  labels:
    app.kubernetes.io/name: demo-credit
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-credit
    app.kubernetes.io/component: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
